- fixed cvPage dependency warning - fixed blogpost prop type warning

--- a/RobotBlog/ClientApp/src/components/loading/bt-spinner.css
+++ b/RobotBlog/ClientApp/src/components/loading/bt-spinner.css
@@ -4,7 +4,7 @@
     border-radius: 50%;
     background-color: transparent;
     border: 2px solid #222;
-    border-top: 2px solid #03A9F4;
+    border-top: 2px solid rgb(45, 137, 239);
     -webkit-animation: 1s spin linear infinite;
     animation: 1s spin linear infinite;
 }
@@ -19,7 +19,7 @@
         transform: rotate(360deg);
     }
 }
-          
+
 @keyframes spin {
     from {
         -webkit-transform: rotate(0deg);
@@ -29,4 +29,4 @@
         -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
     }
-}   
+}
